--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ name: Ben Wozniak
 description: Dreamer, Software Engineer, Reader, treasure hunter (someday) 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: /images/me_with_ryliegh.jpg
+# https://raw.githubusercontent.com/bwozniak27/bwozniak.github.io/master/images/me_with_ryliegh.jpg
 #
 # Flags below are optional
 #
